src/pages/projects-page/pop-up-info/PopUpInfo.style.scss
.popup-background {
  position: fixed;
  top: 0;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.7);
  z-index: 999;
}
.popup-container {
  position: fixed;
  left: 50%;
  top: 50%;
  transform-origin: top center;
  transform: scale(0.5) translate(-50%, -50%);
  transition: transform 0.2s ease-out;
  background-color: white;
  width: 55%;
  min-height: 50%;
  z-index: 1000;
  border-radius: 10px;
  box-shadow: 1px 1px 15px 1px rgba(49, 49, 49, 0.75);
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;

  .close-popup {
    background-color: #ffffff;
    border: none;
    border-radius: 50%;
    width: 30px;
    height: 30px;
    display: inline-block;
    position: absolute;
    right: -5px;
    top: -5px;
    background-image: url("../../../assets/close.svg");
    background-size: 50%;
    background-repeat: no-repeat;
    background-position: center;
    cursor: pointer;
  }
  .vid-container {
    width: 100%;
    height: 70%;
    margin: 0 auto 10px auto;
  }
  .info-container {
    width: 90%;
    height: 40%;
    margin: 10px auto 20px auto;

    .links-container {
      width: 100%;
      display: flex;

      .skill-item-container {
        cursor: pointer;
        position: relative;
        background-color: #fbb224;
        a {
          width: 100%;
          height: 100%;
          position: absolute;
        }
      }
    }

    h2 {
      font-size: 20px;
      font-weight: 600;
      color: #3828a1;
      padding: 5px 0;
    }
    p {
      font-size: 15px;
      font-weight: 500;
      background-color: #f7f5f5;
      padding: 15px 5px;
      border-radius: 5px;
    }
    .tags-container {
      display: flex;
      flex-wrap: wrap;
      width: 100%;
      justify-content: flex-end;
      .tag {
        background-color: #3828a1;
        color: #fbb224;
        font-size: 12px;
        padding: 5px;
        margin-right: 5px;
        margin-bottom: 5px;
      }
    }
  }
}
.popup-container.enter {
  left: 50%;
  top: 50%;
  transform: scale(1) translate(-50%, -50%);
}

@media (max-width: 1024px) {
  .popup-container {
    width: 95%;

    .vid-container {
      width: 100%;
      height: 40%;
    }
    .info-container {
      height: 50%;
      h2 {
        font-size: 16px;
      }
      p {
        font-size: 14px;
      }
      .links-container {
        width: 100%;
        justify-content: center;
        .link {
          flex-basis: 40%;
        }
      }
    }
  }
}

